# OpenGL-Backend

./: .gitignore  CMakeLists.txt  OpenGlBackend.sln  build.cmd
OpenGlBackend/: CMakeLists.txt  Camera.cpp  Camera.h  GLManager.cpp  GLManager.h  Matrix.cpp  Matrix.h  MatrixTypes.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  OpenGlBackend.vcxitems  OpenGlBackend.vcxitems.filters  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  window.cpp  window.h
OpenGlBackend/GLAD/include/glad/: glad.h
OpenGlBackend/GLAD/src/: glad.c
UnitTest1/: MatrixTests.cpp  UnitTest1.vcxproj  UnitTest1.vcxproj.filters
frontend/: Camera.cpp  Camera.h  Entity.cpp  Entity.h  State.cpp  State.h  frontend.vcxproj  frontend.vcxproj.filters  main.cpp  shaders.h  simpleTexture.frag  simpleTexture.vert  window.cpp  window.h
frontend/Resources/: color.frag  color.vert  default.frag  default.vert  light.frag  light.vert  simpleText.frag  simpleText.vert  simpleTexture.frag  simpleTexture.vert  tiles.frag  tiles.vert
